#####################################################################
# simple AVR executable
#####################################################################
add_avr_executable(
   main
   main.cpp
   )

#####################################################################
# libraries to link to
#####################################################################
#target_link_libraries(
#   )
